Fix: root token
